Fix Exercicio7 and the tests related to it.